[package]
name = "klafsa"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
gltf = "1.0.0"
indicatif = "0.16.2"
strum = { version = "0.24.0", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
which = "4.2.5"
